# hdmm

./: .gitignore  README.md  approximation.py  implicit.py  inference.py  mechanism.py  more_templates.py  optimize.py  pyproject.toml  requirements.txt  stochastic.py  templates.py  utilily.py  utility.py  workload.py  yuan_convex.py
examples/: census.py  census_workloads.py  examples.py  geometric.py  pgm.py  workload_error.py
experimental/notebooks/: marginals experimental.ipynb  union kron gradients.ipynb
experiments/: .census_geography.py.swp  LowRankDP.m  census_approximation.py  census_privbayes.py  census_workloads.py  comparisons.py  comparisons_2d.py  end_to_end.py  find_kron_strategies.py  find_marginals.py  find_strategies.py  high_dimensional.py  hyperparam.py  kron_vs_general.py  lowrank.m  marginals.py  relative_error.py  scalability_marginals.py  scalability_other.py  scalability_running.py  utility.py  weighted_census.py
experiments/census_error_analysis/: error_inequality.py  error_variation.py  (+6 more)
notebooks/: census-household.ipynb  disjunctions.ipynb  explore.ipynb  household_wkld.pckl  kron approximation.ipynb  loss functions.ipynb  marginals linop.ipynb  marginals-epsdelta.ipynb  objectives.ipynb  opt+ exploratory.ipynb  opt+ from marginals.ipynb  plotting.ipynb  redistricting.ipynb  stochastic.ipynb  torch.ipynb  union kron gradients.ipynb  union kron inverse.ipynb  union-kron-exploratory.ipynb
privbayes/: parse_census.py
resources/: requirements.txt
test/: test_error.py  test_gradients.py  test_marginals.py  test_matrix.py
(+118 files in other folders)
